<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.NewTrack">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        app:cardBackgroundColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/ntTrackPointsTitle"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/ntName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/track_name"
                android:inputType="textPersonName"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ntDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/track_description"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:textSize="14sp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="?android:attr/dividerVertical"
                    android:gravity="center"
                    android:showDividers="middle">

                    <TextView
                        android:id="@+id/ntDistanceLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingTop="7dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="7dp"
                        android:text="@string/track_distance"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/ntTimeLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingTop="7dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="7dp"
                        android:text="@string/track_time"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/ntPaceLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingTop="7dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="7dp"
                        android:text="@string/track_pace"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="?android:attr/dividerVertical"
                    android:gravity="center"
                    android:showDividers="middle">

                    <TextView
                        android:id="@+id/ntDistanceData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="7dp"
                        android:text="@string/track_distance" />

                    <TextView
                        android:id="@+id/ntTimeData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="7dp"
                        android:text="@string/null_time" />

                    <TextView
                        android:id="@+id/ntPaceData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="7dp"
                        android:text="@string/track_pace" />
                </TableRow>

            </TableLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/ntTrackPointsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/trackpoints"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ntRecycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ntRecycler"
        android:layout_width="408dp"
        android:layout_height="350dp"
        android:layout_marginTop="8dp"
        android:scrollbars="vertical"
        app:layout_constrainedHeight="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ntTrackPointsTitle">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/ntFinishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="onFinishClick"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ntRecycler" />
</androidx.constraintlayout.widget.ConstraintLayout>