<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ViewTrack">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        app:cardBackgroundColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/trackPointsTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/trackTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/track_name"
                android:inputType="textPersonName"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/trackDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/track_description"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:textSize="14sp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="?android:attr/dividerVertical"
                    android:gravity="center"
                    android:showDividers="middle">

                    <TextView
                        android:id="@+id/trackDateLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingTop="7dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="7dp"
                        android:text="@string/track_date"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/trackStartTimeLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingTop="7dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="7dp"
                        android:text="@string/start_time"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/trackEndTimeLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingTop="7dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="7dp"
                        android:text="@string/end_time"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="?android:attr/dividerVertical"
                    android:gravity="center"
                    android:showDividers="middle">

                    <TextView
                        android:id="@+id/trackDateData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="7dp"
                        android:text="@string/track_date" />

                    <TextView
                        android:id="@+id/trackStartTimeData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="7dp"
                        android:text="@string/start_time" />

                    <TextView
                        android:id="@+id/trackEndTimeData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="7dp"
                        android:text="@string/end_time" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="?android:attr/dividerVertical"
                    android:gravity="center"
                    android:showDividers="middle">

                    <TextView
                        android:id="@+id/trackDistanceLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingTop="7dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="7dp"
                        android:text="@string/track_distance"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/trackTimeLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingTop="7dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="7dp"
                        android:text="@string/track_time"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/trackPaceLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingTop="7dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="7dp"
                        android:text="@string/track_pace"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="?android:attr/dividerVertical"
                    android:gravity="center"
                    android:showDividers="middle">

                    <TextView
                        android:id="@+id/trackDistanceData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="7dp"
                        android:text="@string/track_distance" />

                    <TextView
                        android:id="@+id/trackTimeData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="7dp"
                        android:text="@string/track_time" />

                    <TextView
                        android:id="@+id/trackPaceData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="7dp"
                        android:text="@string/track_pace" />

                </TableRow>

            </TableLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/trackPointsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/trackpoints"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/trackPointRecycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trackPointRecycler"
        android:layout_width="415dp"
        android:layout_height="286dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trackPointsTitle" />

    <Button
        android:id="@+id/trackDeleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:onClick="onDeleteClick"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/trackFinishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="onFinishClick"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>